fixed a big issue with overflow on my bg's, discovered that I will want to replace the png's of these gradients with actual rgb css to reduce load on the app

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,18 +24,23 @@ a {
   text-decoration: none;
 }
 
+/* .nav-parent-cont {
+  width: 100vw;
+} */
+
 .navbar {
   position: fixed;
   /* top: 0;
   left: 0; */
-  width: 100%;
+  width: 100vw;
   /* z-index: 2; */
-  padding: 15px;
+  /* padding: 15px; */
   /* background-color: red; */
 }
 
 .navbar ul {
-  margin: 0;
+  margin: 10px 0 10px 10px;
+  /* background-color: red; */
   
 }
 
@@ -73,6 +78,50 @@ a {
 
 #home-img {
   width: 60vw;
+}
+
+/* About CSS */
+
+.about {
+  /* display: grid;
+  grid-template-columns: 1fr; */
+  /* width: 100vw; */
+
+
+
+}
+
+.about-bg {
+  display: flex;
+  background-image: url(./Assets/Images/about_bg_01.png);
+  width: 100vw;
+  height: 100vh;
+  max-width: 100%;
+  max-height: 100%;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+#about-text {
+  width: 60vw;
+}
+
+.about-bg2 {
+  display: flex;
+  background-image: url(./Assets/Images/about_bg_02.png);
+  width: 100vw;
+  height: 100vh;
+  max-width: 100%;
+  max-height: 100%;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
 }
 
 
